<resources>
    <string name="app_name">Puntos de interes</string>
    <string name="titulo_sitio">Sitio turistico</string>
    <string name="nombre_poi">Reserva Natural Flor de lotto</string>
    <string name="temperature">Temperatura: 18°</string>
    <string name="altura">Altura: 2600 msn</string>
    <string name="descripcion">El sitio se caracteriza por: su conexión con la madre naturaleza, el verde de sus paisajes y la tranquilidad junto con el cantar de las aves.</string>
    <string name="registro_sitio">Registro Sitio</string>
    <string name="registrar">Registrar</string>
    <string name="nombre">Nombre:</string>
    <string name="temperatura_registro">Temperatura:</string>
    <string name="altura_sitio">Altura:</string>
    <string name="nombre_info">"Nombre: %s,\n Altura: %f,\n Moneda: %s,\n Actividades: %s,\n Cantidad: %s"</string>
    <string name="moneda">Moneda: COP</string>
    <string name="peso">COP</string>
    <string name="dolar">USD</string>
    <string name="descripcion_registro">Descripción</string>
    <string name="actividades">Actividades</string>
    <string name="Piscina">Piscina</string>
    <string name="bicicleta">Bicicleta</string>
    <string name="canotaje">Canotaje</string>
    <string name="rate">Rate</string>
    <string-array name="Rate">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="Notificaciones">Notificaciones</string>
    <string name="sonido_notificaciones">Activar sonido de notificaciones</string>
    <string name="Configuración">configuracion</string>
    <string name="poi_1">Reserva Natural Omagua</string>
    <string name="desc_poi_1">Reserva natural a solo 10 kms de Leticia, por la vía hacía Tarapacá</string>
    <string name="poi_2">Parque Santander</string>
    <string name="desc_poi_2">Su principal atractivo es estar rodeado de vegetación endémica de la amazonía</string>
    <string name="poi_3">Isla Los Micos</string>
    <string name="desc_poi_3">Isla fluvial ubicada en el departamento del Amazonas</string>
    <string name="poi_4">Puerto Nariño</string>
    <string name="desc_poi_4">Situado a orillas del río Loretoyaco, a 87 km de Leticia</string>
    <string name="poi_5">Reserva Flor de Lotto</string>
    <string name="desc_poi_5">Esta reserva natural te permite admirar el lotto más grande del Amazonas</string>
    <string name="namePOISelected">Reserva Natural Omagua.</string>
    <string name="descriptionPOISelected">A solo 10 kms de Leticia, por la vía hacía Tarapacá, usted se encontrará justo en la entrada de esta reserva natural. Y para llegar hay diferentes tipos de transportes que lo llevaran hasta la puerta de la reserva.</string>
    <string name="img1">ImageOmagua</string>
    <string name="ciudad_poi">Leticia, Amazonas</string>
    <string name="imagedescription">ddd</string>
    <string name="logo_ubicacion">logo ubicación</string>
    <string name="email">jkmahecha@yahoo.com</string>
    <string name="image_email">image_email</string>
    <string name="phone">3103379233</string>
    <string name="web_page">https://omagua.amazonia.com.co</string>
    <string name="address">Km 10 Leticia, Amazonas</string>
    <string name="activities">Actividades</string>
    <string name="desc_activities">Caminata, puente colgante, Tour canopy.</string>
    <string name="temperatura">25° C</string>
    <string name="rates">4.5</string>
</resources>