<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="414dp"
        android:layout_height="732dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/sitio_image_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#FAF5F5"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/verde"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/titulo_text_view"
            style='@style/Texto_titulo'
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="4dp"

            android:text="@string/nombre_poi"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.342"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="396dp"
            android:layout_height="352dp"
            android:layout_marginBottom="-84dp"
            android:background="@drawable/borde_redondo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/temperatura_text_view"
                style='@style/Texto_normal'
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginEnd="209dp"
                android:layout_marginBottom="8dp"
                android:text="@string/temperatura"

                app:layout_constraintBottom_toTopOf="@+id/altura_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/altura_text_view"
                style='@style/Texto_normal'
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginEnd="211dp"
                android:layout_marginBottom="4dp"
                android:text="@string/altura"

                app:layout_constraintBottom_toTopOf="@+id/moneda_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/descripcion_text_view"
                style='@style/Texto_normal'
                android:layout_width="335dp"
                android:layout_height="80dp"
                android:layout_marginStart="29dp"
                android:layout_marginTop="8dp"

                android:layout_marginEnd="40dp"
                android:text="@string/descripcion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/moneda_text_view"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/moneda_text_view"
                style='@style/Texto_normal'
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"

                android:text="@string/moneda"
                app:layout_constraintBottom_toTopOf="@+id/descripcion_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.077"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/actividades_text_view"
                style="@style/Texto_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="119dp"
                android:text="@string/actividades"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/descripcion_text_view"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descripcion_text_view"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>